[project]
name = "polymarket-nba-report"
version = "0.1.0"
description = ""
authors = [
    { name = "etchedheadplate", email = "94640304+etchedheadplate@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "aio-pika==9.6.1",
    "aiofiles==25.1.0",
    "aiormq==6.9.3",
    "annotated-types==0.7.0",
    "asyncpg==0.31.0",
    "cfgv==3.5.0",
    "click==8.3.1",
    "contourpy==1.3.3",
    "coverage==7.13.2",
    "cycler==0.12.1",
    "distlib==0.4.0",
    "filelock==3.20.3",
    "fonttools==4.61.1",
    "greenlet==3.3.1",
    "identify==2.6.16",
    "idna==3.11",
    "iniconfig==2.3.0",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.8",
    "multidict==6.7.1",
    "mypy-extensions==1.1.0",
    "nodeenv==1.10.0",
    "numpy==2.4.1",
    "packaging==26.0",
    "pamqp==3.3.0",
    "pathspec==1.0.3",
    "pillow==12.1.0",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "pre-commit==4.5.1",
    "propcache==0.4.1",
    "psycopg2==2.9.11",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "pyright==1.1.408",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytokens==0.4.0",
    "pyyaml==6.0.3",
    "six==1.17.0",
    "sqlalchemy==2.0.46",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "virtualenv==20.36.1",
    "yarl==1.23.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.7,<0.16.0)",
    "pyright (>=1.1.408,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
]

[tool.setuptools]
packages = []

[tool.black]
line-length = 120
target-version = [
    "py312",
]

[tool.ruff]
line-length = 120
target-version = "py312"
fix = true
exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.pyright]
include = [
    ".",
]
exclude = [
    "**/__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]
pythonVersion = "3.12"
typeCheckingMode = "strict"
